--- a/CheckListTemplates/CheckListTemplates.csproj
+++ b/CheckListTemplates/CheckListTemplates.csproj
@@ -236,6 +236,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="App_Data\TDM.pptx" />
+    <Content Include="App_Data\TDMGuestServices.pptx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
