setting the shape to be good some how

--- a/CheckListTemplates/CheckListTemplates.csproj
+++ b/CheckListTemplates/CheckListTemplates.csproj
@@ -239,6 +239,7 @@
     </Content>
     <Content Include="App_Data\TDM.pptx" />
     <Content Include="App_Data\TDMGuestServices.pptx" />
+    <Content Include="App_Data\TDMGuestServices_original.pptx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
