--- a/CheckListTemplates/CheckListTemplates.csproj
+++ b/CheckListTemplates/CheckListTemplates.csproj
@@ -218,9 +218,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\DTO\ChartHolder.cs" />
-    <Compile Include="Models\DTO\RunTB.cs" />
-    <Compile Include="Models\DTO\Slide.cs" />
+    <Compile Include="Models\DTO\ChartDTO.cs" />
+    <Compile Include="Models\DTO\RunDTO.cs" />
+    <Compile Include="Models\DTO\SlideDTO.cs" />
+    <Compile Include="Models\DTO\TableDTO.cs" />
     <Compile Include="Models\DTO\TDMGuestServices.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -292,6 +293,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\PPT\Index.cshtml" />
     <Content Include="Views\PPT\Edit.cshtml" />
+    <Content Include="Views\PPT\TextBoxes.cshtml" />
+    <Content Include="Views\PPT\Charts.cshtml" />
+    <Content Include="Views\PPT\Tables.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
